# irods_working_group_authentication

./: 20200227-minutes.md  20200324-minutes.md  20200428-minutes.md  20200526-minutes.md  20200623-minutes.md  20200728-minutes.md  20200825-minutes.md  20200922-minutes.md  20201027-minutes.md  20210126-minutes.md  20210223-minutes.md  20210323-minutes.md  20210727-minutes.md  20211026-minutes.md  20220125-minutes.md  20220222-minutes.md  20220322-minutes.md  20220426-minutes.md  20220524-minutes.md  20220628-minutes.md  20220726-minutes.md  20220823-minutes.md  20220927-minutes.md  20221025-minutes.md  20230124-minutes.md  20230228-minutes.md  20230328-minutes.md  20230425-minutes.md  20230627-minutes.md  20230725-minutes.md  20230822-minutes.md  20230926-minutes.md  20231024-minutes.md  20240123-minutes.md  20240227-minutes.md  20240326-minutes.md  20240423-minutes.md  20240625-minutes.md  20240723-minutes.md  20240827-minutes.md  (+13 more)
development/: README.md
development/command/: CMakeLists.txt
development/command/src/: iauth.cpp
development/plugins/: CMakeLists.txt  authentication_api.cmake  authentication_plugin.cmake  authentication_plugin_framework.hpp  libirods-api_plugin-authentication.cpp  libirods-authentication_plugin-native.cpp
poc_surf/: README.md
